--- a/.drone.yml
+++ b/.drone.yml
@@ -6,7 +6,7 @@ pipeline:
   testing:
     image: golang:1.14.0
     commands:
-      - go test -v bench .
+      - go test -v -bench .
       - go vet
     when:
       branch:
