--- a/.drone.yml
+++ b/.drone.yml
@@ -2,8 +2,8 @@ kind: pipeline
 type: docker
 name: testdrone
 
-pipeline:
-  testing:
+step:
+    - name: test
     image: golang:1.14.0
     commands:
       - go test -v -bench .
@@ -13,4 +13,3 @@ pipeline:
         - master
         
 
-        
