--- a/.drone.yml
+++ b/.drone.yml
@@ -2,8 +2,8 @@ kind: pipeline
 type: docker
 name: testdrone
 
-step:
-    - name: test
+steps:
+  - name: test
     image: golang:1.14.0
     commands:
       - go test -v -bench .
